# edg_ur10_robotiq

./: CMakeLists.txt  README.md  package.xml
config/: TopicsList.txt  TopicsList_digit.txt  TopicsList_tactile.txt
launch/: rqt_multiplot_ATI.xml  rqt_multiplot_ATI_addSensor.xml  ur_control.launch  ur_experiment.launch
msg/: cmdPacket.msg
src/: adaptive_robot_control.py  checkSavedMatFile.txt  check_data.py  config.py  data_logger.py  digitFramePublisher.py  digit_loadcell_data_log.py  grab_stuff_demo.py  graspStatePublisher.py  keyboard_teleop.py  robotStatePublisher.py  screw_unscrew.py  simple_data_log.py  simple_experiment.py  simple_robot_control.py  tactileFingertipPublisher.py  training_grasps.py  unscrew_demo.py
src/helperFunction/: FT_callback_helper.py  __init__.py  adaptiveMotion.py  fileSaveHelper.py  rtde_helper.py  transformation_matrix.py  utils.py
srv/: GetImage.srv
